Fix the expanding sections on Safari

--- a/src/components/ExpandingSection.css
+++ b/src/components/ExpandingSection.css
@@ -8,7 +8,7 @@
 }
 
 .ExpandingSection--expanded {
-  max-height: 500px;
+  max-height: 450px;
   padding: 10px;
 }
 
@@ -17,7 +17,8 @@
 }
 
 .ExpandingSection__content {
-  flex: 1;
+  flex-shrink: 1;
+  overflow: auto;
 }
 
 .ExpandingSection__footer {
